----------------------------------------------------------
moveVis 0.9.5
improvements to workflow
-----------------------------------------------------------
New features:
 + RGB stats support added for animate_stats() and animate_move()
 + added animate_move() argument "time_scale" to enable a time scale
 + added animate_move() argument frame_layout for user friendly, complex layouting of the output GIF by specifiying the plot locations

Improvements:
 + several major bug fixes
 + major animate_raster() bug fixes, reenabling use of RGB rasterStack inputs
 + stats legend is now locatable using frame_layout

Contributers:
 + Bart Kranstauber

----------------------------------------------------------
moveVis 0.9.4
adding animate_stats() and stats arguments for animate_move()
-----------------------------------------------------------
New features:
 + animate_stats(): Enables creation of statistic plot animations visualizing possible relationships between movement paths and basemap. Define individual plot designs based on ggplot2 syntax.
 + stats arguments for animate_move(): Enables statistic plot animations side-by-side with the spatial plot animation of animate_move. Use the animate_stats() arguments with animate_move().
 + extent_factor argument for animate_move(): Increase the distance between the spatial extents of the movement paths and the basemap.

Improvements:
 + Several minor bug fixes


-----------------------------------------------------------
moveVis 0.9.3
Fixing major bug
-----------------------------------------------------------
Improvements
 + Fixed a major bug causing an unavoidable error when creating animations with animate_move() using user defined basemaps (Error message: 'Error in eval(expr, envir, enclos) : Object 'frame_l' not found')


-----------------------------------------------------------
moveVis 0.9.2
adding frame_width and frame_height arguments
-----------------------------------------------------------
New features: